STYLES: attemtp to fix uncentered button text on Safari mobile

--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,10 @@ body.night-mode {
 
 .input-form button {
     position: relative;
-    box-sizing: border-box;
     margin: 5px 2.5px;
     height: 50px;
     width: 50px;
+    text-align: center;
     font-size: 25px;
     font-weight: bold;
     color: #eee;
